# ChangeLog for dev-libs/libIDL
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libIDL/ChangeLog,v 1.127 2010/10/05 01:36:49 leio Exp $

  05 Oct 2010; Mart Raudsepp <leio@gentoo.org> -libIDL-0.8.13.ebuild:
  Remove old

  11 Sep 2010; <nixnut@gentoo.org> libIDL-0.8.14.ebuild:
  ppc stable #329963

  09 Sep 2010; Brent Baude <ranger@gentoo.org> libIDL-0.8.14.ebuild:
  Marking libIDL-0.8.14 ppc64 for bug 329963

  05 Sep 2010; Raúl Porcel <armin76@gentoo.org> libIDL-0.8.14.ebuild:
  alpha/ia64/sh/sparc stable wrt #329963

  23 Aug 2010; Jeroen Roovers <jer@gentoo.org> libIDL-0.8.14.ebuild:
  Stable for HPPA (bug #329963).

  02 Aug 2010; Markus Meier <maekke@gentoo.org> libIDL-0.8.14.ebuild:
  arm stable, bug #329963

  31 Jul 2010; Pacho Ramos <pacho@gentoo.org> libIDL-0.8.14.ebuild:
  amd64 stable, bug 329963

  27 Jul 2010; Christian Faulhammer <fauli@gentoo.org> libIDL-0.8.14.ebuild:
  stable x86, bug 329963

*libIDL-0.8.14 (18 Jun 2010)

  18 Jun 2010; Pacho Ramos <pacho@gentoo.org> -libIDL-0.8.12.ebuild,
  +libIDL-0.8.14.ebuild:
  Version bump and remove old

  17 Jan 2010; Jeroen Roovers <jer@gentoo.org> libIDL-0.8.13.ebuild:
  Stable for HPPA (bug #281427).

  16 Jan 2010; Raúl Porcel <armin76@gentoo.org> libIDL-0.8.13.ebuild:
  sh stable

  03 Dec 2009; Brent Baude <ranger@gentoo.org> libIDL-0.8.13.ebuild:
  Marking libIDL-0.8.13 ppc64 stable for bug 281427

  28 Nov 2009; Raúl Porcel <armin76@gentoo.org> libIDL-0.8.13.ebuild:
  alpha/ia64/sparc stable wrt #281427

  05 Nov 2009; Markus Meier <maekke@gentoo.org> libIDL-0.8.13.ebuild:
  arm stable, bug #281427

  24 Oct 2009; nixnut <nixnut@gentoo.org> libIDL-0.8.13.ebuild:
  ppc stable #281427

  16 Oct 2009; Markus Meier <maekke@gentoo.org> libIDL-0.8.13.ebuild:
  x86 stable, bug #281427

  08 Oct 2009; Olivier Crête <tester@gentoo.org> ChangeLog:
  Stable on amd64, bug #281427

  04 Oct 2009; Romain Perier <mrpouet@gentoo.org>