@@ -1,6 +1,8 @@
-# Copyright 1999-2010 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libIDL/libIDL-0.8.14.ebuild,v 1.8 2010/09/11 10:47:50 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libIDL/libIDL-0.8.14.ebuild,v 1.11 2012/05/09 01:28:14 aballier Exp $
+
+GNOME2_LA_PUNT="yes"
 
 inherit eutils gnome2 autotools
 
@@ -14,10 +16,11 @@ IUSE=""
 
 RDEPEND=">=dev-libs/glib-2.4"
 DEPEND="sys-devel/flex
-	sys-devel/bison
-	dev-util/pkgconfig"
+	virtual/yacc
+	virtual/pkgconfig"
 
 DOCS="AUTHORS BUGS ChangeLog HACKING MAINTAINERS NEWS README"
+G2CONF="--disable-static"
 
 src_unpack() {
 	gnome2_src_unpack
