@@ -1,6 +1,16 @@
 # ChangeLog for dev-libs/libIDL
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libIDL/ChangeLog,v 1.127 2010/10/05 01:36:49 leio Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libIDL/ChangeLog,v 1.130 2012/05/09 01:28:14 aballier Exp $
+
+  09 May 2012; Alexis Ballier <aballier@gentoo.org> libIDL-0.8.14.ebuild:
+  keyword ~amd64-fbsd
+
+  04 May 2012; Jeff Horelick <jdhore@gentoo.org> libIDL-0.8.14.ebuild:
+  dev-util/pkgconfig -> virtual/pkgconfig
+
+  14 Aug 2011; Nirbheek Chauhan <nirbheek@gentoo.org> libIDL-0.8.14.ebuild:
+  Unconditionally disable static libraries, and drop .la files, DEPEND on
+  virtual/yacc: bug 378247
 
   05 Oct 2010; Mart Raudsepp <leio@gentoo.org> -libIDL-0.8.13.ebuild:
   Remove old
